--- a/wp-content/themes/queensland_holidays/style.css
+++ b/wp-content/themes/queensland_holidays/style.css
@@ -47,7 +47,6 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.io/normalize.css/
 # Normalize
 --------------------------------------------------------------*/
 html {
-	font-family: sans-serif;
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust:     100%;
 }
@@ -266,7 +265,7 @@ input,
 select,
 textarea {
 	color: #404040;
-	font-family: sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
 	font-size: 1rem;
 	line-height: 1.5;
@@ -279,6 +278,7 @@ h4,
 h5,
 h6 {
 	clear: both;
+	font-family: 'Pacifico', cursive !important;
 }
 
 p {
@@ -893,3 +893,187 @@ object {
 .gallery-caption {
 	display: block;
 }
+
+/*************************************Header***********************************************/
+body{
+	background: url('./img/body-bg.png') #eff5fa repeat-x !important;
+}
+.site-branding .site-title a{
+	font-size: 36px;
+	line-height: 40px;
+	color: #fff;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+.site-branding .site-title{
+	margin-bottom: 0px;
+}
+.site-branding{
+	text-align: right;
+}
+.site-branding .site-description{
+	font-size: 12px;
+	line-height: 33px;
+	color: #fff;
+	margin-top: -12px;
+}
+#header-top a{
+  border-style: solid;
+  border-width: 1px;
+  border-color: rgb(209, 209, 209);
+  border-radius: 3px;
+  background-image: -moz-linear-gradient( 90deg, rgb(195,195,195) 0%, rgb(255,255,255) 100%);
+  background-image: -webkit-linear-gradient( 90deg, rgb(195,195,195) 0%, rgb(255,255,255) 100%);
+  background-image: -ms-linear-gradient( 90deg, rgb(195,195,195) 0%, rgb(255,255,255) 100%);
+  color: #000;
+    font-size: 13px;
+    line-height: 33px;
+    padding: 5px 10px;
+}
+#header-top{
+	text-align: right;
+	margin-bottom: 40px;
+}
+#header-social ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+#header-social ul li{
+	float: left;
+	margin-right: 5px;
+}
+#header-social ul li a{
+	color: #fff;
+}
+#header-social ul li a i:before{
+	font-size: 32px;
+}
+.site-branding{
+	margin-bottom: 10px;
+}
+#footer-menu{
+    background: #2371b9;
+    border-top: 1px solid #bfc4c8;
+    border-bottom: 1px solid #bfc4c8;
+    padding:22px 0 18px;
+}
+#footer-menu li a{
+	color: #fff;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-family: 'Open Sans', sans-serif;
+    line-height: 21px;
+    margin: 0 24px 0 20px;
+}
+#footer-menu li{
+	float: left;
+	display: inline-block;
+}
+#footer-menu li.current-menu-item a{
+	font-weight: bold;
+}
+#menu-footer{
+	margin-bottom:0px;
+}
+#footer-menu li:after{
+    content: '/';
+    display: block;
+    width: 10px;
+    color: #fff;
+    position: absolute;
+    top: 1px;
+}
+#footer-menu li:first-child:after{
+	content: '';
+}
+.site-footer{
+	padding:15px 0 25px;
+	text-align: center;
+}
+.site-footer p{
+	font-size: 12px;
+	line-height: 20px;
+	color: #000;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;	
+}
+#header-top-menu > div{
+	float: left;
+}
+#header-top-menu .top-2 a{
+    color: #fff;
+    font-size: 15px;
+    font-family: 'Open Sans', sans-serif;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-align: left;
+    display: block;
+    padding: 25px 10px;
+}
+#header-top-menu .top-3 a, #header-top-menu .top-4 a{
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: 'Open Sans', sans-serif;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-align: center;
+    display: block;
+    padding: 25px 10px;
+}
+#header-top-menu .top-5 a{
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: 'Open Sans', sans-serif;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-align: center;
+    display: block;
+    padding: 25px 10px 25px 40px;
+}
+#header-top-menu .top-1{
+	width: 235px;
+	height: 70px;
+}
+#header-top-menu .top-2{
+	background: #a723f3;
+	width: 197px;
+	height: 70px;
+}
+#header-top-menu .top-3{
+	background: #f70000;
+	width: 230px;
+	height: 70px;
+}
+#header-top-menu .top-3 a{
+	background: url(./img/hot-deals.png) no-repeat;
+	background-position: 30px 11px;
+}
+#header-top-menu .top-4{
+	background: #76b62e;
+	width: 235px;
+	height: 70px;
+}
+#header-top-menu .top-4 a{
+	background: url(./img/holiday-deals.png) no-repeat;
+	background-position: 17px 11px;
+}
+#header-top-menu .top-5{
+	background: #f70000;
+	width: 235px;
+	height: 70px;
+}
+#header-top-menu .top-5 a{
+	background: url(./img/entertainment.png) no-repeat;
+	background-position: 12px 15px;
+}
+#header-top-menu{
+	border: 4px solid #fff;
+}
+#header-top-menu .top-2 a{
+	padding-top:15px !important;
+}
+
