--- a/wp-content/themes/queensland_holidays/style.css
+++ b/wp-content/themes/queensland_holidays/style.css
@@ -1076,4 +1076,52 @@ body{
 #header-top-menu .top-2 a{
 	padding-top:15px !important;
 }
-
+nav.navbar-inverse{
+	background:#f9e782;
+	border-left: 4px solid #fff;
+	border-right: 4px solid #fff;
+	border-bottom: 4px solid #fff;
+	border-top: 0px;
+	border-radius: 0px;
+}
+nav.navbar-inverse .menu-primary ul li a{
+color: #000;
+    font-size: 13px;
+    font-family: 'Open Sans';
+    max-width: 101px;
+    padding: 5px 4px;
+    line-height: 16px;
+    vertical-align: middle;
+    display: inline-table;
+}
+nav.navbar-inverse .menu-primary > ul > li{
+    line-height: 56px;
+    text-align: center;
+    border-left: 1px solid #ddc920;
+}
+nav.navbar-inverse .menu-primary > ul > li:first-child{
+	border-left: 0px;
+}
+ul#menu-primary{
+	float: right;
+}
+#bs-example-navbar-collapse-1{
+	padding: 0px;
+}
+#bs-example-navbar-collapse-1:before{
+    display: block;
+    content: "SEARCH";
+    width: 108px;
+    height: 62px;
+    position: absolute;
+    left: -20px;
+    color: #fff;
+    text-align: center;
+    background: url(./img/nav-arrow.png) no-repeat;
+    top: -5px;
+    background-position: -4px 0px;
+    background-size: 100% 63px;
+  	font-family: "Open Sans";
+   	font-size: 15px;
+   	padding: 23px 9px 23px 0;
+}
